--- a/json_wo/.vscode/settings.json
+++ b/json_wo/.vscode/settings.json
@@ -69,6 +69,8 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "regex": "cpp",
+        "shared_mutex": "cpp"
     }
 }
