Add debugging configurations and enhance router test cases
- Introduced a new launch configuration for debugging router tests in launch.json.
- Updated tasks.json to include a build task specifically for router tests.
- Enhanced router.hpp with detailed documentation for handler registration and incoming frame handling.
- Improved ocpp_model.cpp to support JSON serialization for Authorize requests and responses.
- Added new test cases in test_router.cpp to validate the routing of BootNotification and Authorize actions.

--- a/json_wo/.vscode/launch.json
+++ b/json_wo/.vscode/launch.json
@@ -24,6 +24,31 @@
 
       // new configuration to debug the gtest binary under gdb
       {
+        "name": "Debug router tests (gdb)",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${workspaceFolder}/tests/test_router",
+        "args": [],
+        "cwd": "${workspaceFolder}",
+        "preLaunchTask": "build router tests",
+        "miDebuggerPath": "/usr/bin/gdb",
+        "MIMode": "gdb",
+        "externalConsole": false,
+        "stopAtEntry": false,
+        "setupCommands": [
+          {
+            "description": "Enable pretty-printing for gdb",
+            "text": "-enable-pretty-printing",
+            "ignoreFailures": true
+          },
+          {
+            "description": "Break on C++ throw",
+            "text": "catch throw",
+            "ignoreFailures": true
+          }
+        ]
+      },
+      {
         "name": "Debug HappyPath (gdb)",
         "type": "cppdbg",
         "request": "launch",
