--- a/json_wo/.vscode/tasks.json
+++ b/json_wo/.vscode/tasks.json
@@ -59,7 +59,24 @@
       "problemMatcher": []
     },
     {
-        "label": "build and run tests",
+      "label": "build router tests",
+      "type": "shell",
+      "command": "g++",
+      "args": [
+        "-std=c++17",
+        "-g",
+        "-O0",
+        "-I", "${workspaceFolder}/include",
+        "${workspaceFolder}/tests/test_router.cpp",
+        "${workspaceFolder}/router.cpp",
+        "${workspaceFolder}/ocpp_model.cpp",
+        "-o", "${workspaceFolder}/tests/test_router",
+        "-pthread"
+      ],
+      "group": { "kind": "build", "isDefault": false }
+    },
+    {
+        "label": "build and run router tests",
         "type": "shell",
         "command": "g++",
         "args": [
@@ -70,6 +87,7 @@
             "ocpp_model.cpp",
             "-o",
             "tests/test_router",
+            "-pthread",
             // "-lstdc++fs" // remove if not needed
             "&&",
             "./tests/test_router"
