Add build and run task for fake timer tests
- Introduced a new task in tasks.json to compile and execute fake timer tests using g++ with necessary flags and libraries.
- Created a new draft.hpp file containing the ReconnectController implementation and associated structures for handling reconnections.
- Updated readme.md to reflect the new milestone 3 exercise focusing on reconnect behavior and state management.
- Added fake_timers.cpp to implement a TimerPump for testing timer functionality.

--- a/json_wo/.vscode/tasks.json
+++ b/json_wo/.vscode/tasks.json
@@ -99,6 +99,28 @@
         }
     },
     {
+        "label": "build and run fake timer tests",
+        "type": "shell",
+        "command": "g++",
+        "args": [
+            "-std=c++17",
+            "-I./include",
+            "${workspaceFolder}/tests/fake_timers.cpp",
+            "-o",
+            "tests/fake_timers",
+            "-lboost_system",
+            "-lgtest",
+            "-lgtest_main",
+            "-pthread",
+            "&&",
+            "./tests/fake_timers"
+        ],
+        "group": {
+            "kind": "build",
+            "isDefault": false
+        }
+    },
+    {
       "label": "build-and-run-integration-tests",
       "type": "shell",
       "command": "g++",
