Refactor reconnect mechanism and enhance test infrastructure
- Added ReconnectSignals to manage connection states and callbacks in ReconnectGlue.
- Introduced TestClient and TestHarness classes for improved testing of WebSocket client-server interactions.
- Updated WsClient and WsServerSession to include state management for connection status.
- Enhanced Session class with heartbeat response handling.
- Implemented signal-based callbacks for connection events in WsClient.
- Improved reconnect logic to handle transport errors and connection closures more gracefully.
- Added tests for reconnect behavior and ensured proper message sequencing after reconnections.
- Cleaned up and organized code for better readability and maintainability.

--- a/json_wo/.vscode/tasks.json
+++ b/json_wo/.vscode/tasks.json
@@ -152,6 +152,8 @@
             "${workspaceFolder}/router.cpp",
             "${workspaceFolder}/ocpp_model.cpp",
             "${workspaceFolder}/tests/test_server.cpp",
+            "${workspaceFolder}/tests/test_client.cpp",
+            "${workspaceFolder}/tests/test_harness.cpp",
             "-o",
             "tests/test_reconnect",
             "-lboost_system",
