Add manual reply handling and test for out-of-order responses in Session

--- a/json_wo/.vscode/tasks.json
+++ b/json_wo/.vscode/tasks.json
@@ -176,6 +176,9 @@
             "-std=c++17",
             "-I./include",
             "${workspaceFolder}/tests/test_session.cpp",
+            "${workspaceFolder}/tests/test_client.cpp",
+            "${workspaceFolder}/tests/test_server.cpp",
+            "${workspaceFolder}/tests/test_harness.cpp",
             "${workspaceFolder}/router.cpp",
             "${workspaceFolder}/ocpp_model.cpp",
             "-o",
